# windstorm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/windstorm/: app.h  commands.h  log.h  version.h
src/: main.cpp
src/app/: main.cpp
src/core/: app.cpp  commands.cpp  version.cpp
src/util/: log.cpp
